make server funcs funcs

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-DISCORD_ID=
-DISCORD_SECRET=
-AUTH_SECRET=b198e07a64406260b98f06e21c457b84
+AUTH_GOOGLE_ID=your_google_client_id
+AUTH_GOOGLE_SECRET=some_google_secret
+AUTH_SECRET=somereallylongsecret
 AUTH_TRUST_HOST=true
 AUTH_URL=http://localhost:3000
 VITE_AUTH_PATH=/api/auth
+DB_URL=libsql://db-url
+DB_TOKEN=some_db_secrect
+
